data/derived/comb/progs/unify/prog2162.ml.out
Characters 133-135:
  digit [] digit;;
        ^^
Error: This expression has type 'a list
       but an expression was expected of type int
